--- a/index.html
+++ b/index.html
@@ -9,13 +9,100 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css">
+
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="container"></div>
-    <h2 class="para"></h2>
+    
+    <section id="container">
+        <header>
+            <div id="logo">
+                <h2>SHEHABUL ISLAM SAWRAZ</h2>
+                <h4>APP DEVELOPER AND CYBER SECURITY FREAK</h4>
+            </div>
+            <div class="social-icons-container">
+                <span class="social-text">
+                    <button class="pulse-button">
+                        <i class="fas fa-share"></i>
+                    </button>
+                </span>
+
+                <ul class="social-icons">
+                    <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href=""><i class="fab fa-youtube"></i></a></li>
+                    <li><a href=""><i class="fab fa-github"></i></a></li>
+                    <li><a href=""><i class="fab fa-telegram-plane"></i></a></li>
+                </ul>
+            </div>
+        </header>
+
+        <section id="content">
+            <div id="profile">
+                <div class="about">
+                    <div class="profile-pic">
+                        <ul>
+                            <li><img src="images/pcr.png" alt="Profile Photo"></li>
+                            <li><img src="images/pcr1.png" alt="Profile Photo"></li>
+                        </ul>
+                    </div>
+                    <h1>SHEHABUL ISLAM SAWRAZ</h1>
+                    <h3>APP DEVELOPER AND CYBER SECURITY FREAK</h3><br>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe iste rerum minus facere! Et, doloribus consequuntur
+                        repellendus aliquam repellat tempora corporis neque, ut enim vel magnam itaque quo atque maxime molestiae dolorum? 
+                        Odit dolorem ipsum recusandae omnis cum voluptate, quae voluptatem et, cumque ducimus error repellat nulla, delectus 
+                        quisquam nihil.
+                    </p>
+                </div>
+
+                <ul class="personal-info">
+                    <li><label>Name: </label><span>SHEHABUL ISLAM SAWRAZ</span></li>
+                    <li><label>Email: </label><span class="word-wrap">atiq115577@gmail.com</span></li>
+                    <li><label>Address: </label><span>Jatrabari, Bangladesh</span></li>
+                    <li><label>Profession: </label><span>Student</span></li>
+                    <li><label>Workplace: </label><span>Bangladesh University of Engineering & Technology (BUET)</span></li>
+                    <li><label>Website: </label><span class="word-wrap">www.unknown.com</span></li>
+                </ul>
+            </div>
+
+            <nav class="menu">
+                <ul class="tabs">
+                    <li>
+                        <a href="" class="tab-profile">
+                        <i><i class="fas fa-user"></i></i>
+                        PROFILE
+                        </a>
+
+                        <a href="" class="tab-profile">
+                        <i><i class="fa fa-wpexplorer"></i></i>
+                        RESUME
+                        </a>
+
+                        <a href="" class="tab-profile">
+                        <i><i class="fa fa-eercast"></i></i>
+                        PORTFOLIO
+                        </a>
+
+                        <a href="" class="tab-profile">
+                        <i><i class="fab fa-telegram"></i></i>
+                        CONTACT
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
+
+        <footer>
+            <div class="copyright">Copyright &copy; 2021 Shehabul Islam Sawraz</div>
+        </footer>
+
+    </section>
+
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"></script>
