--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
@@ -47,16 +48,14 @@
                     <div class="profile-pic">
                         <ul>
                             <li><img src="images/pcr.png" alt="Profile Photo"></li>
-                            <li><img src="images/pcr1.png" alt="Profile Photo"></li>
                         </ul>
                     </div>
-                    <h1>SHEHABUL ISLAM SAWRAZ</h1>
+                    <h2>SHEHABUL ISLAM SAWRAZ</h2>
                     <h3>APP DEVELOPER AND CYBER SECURITY FREAK</h3><br>
                     <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe iste rerum minus facere! Et, doloribus consequuntur
-                        repellendus aliquam repellat tempora corporis neque, ut enim vel magnam itaque quo atque maxime molestiae dolorum? 
-                        Odit dolorem ipsum recusandae omnis cum voluptate, quae voluptatem et, cumque ducimus error repellat nulla, delectus 
-                        quisquam nihil.
+                        repellendus aliquam repellat tempora corporis neque 
+                        
                     </p>
                 </div>
 
@@ -72,29 +71,48 @@
 
             <nav class="menu">
                 <ul class="tabs">
-                    <li>
-                        <a href="" class="tab-profile">
+                    <li class="tmenu">
+                        <a href="#profile" class="tab-profile active">
                         <i><i class="fas fa-user"></i></i>
                         PROFILE
                         </a>
+                    </li>
 
-                        <a href="" class="tab-profile">
+                    <li class="tmenu">
+                        <a href="#resume">
                         <i><i class="fa fa-wpexplorer"></i></i>
                         RESUME
                         </a>
+                    </li>
 
-                        <a href="" class="tab-profile">
+                    <li class="tmenu">
+                        <a href="#portfolio">
                         <i><i class="fa fa-eercast"></i></i>
                         PORTFOLIO
                         </a>
+                    </li>
 
-                        <a href="" class="tab-profile">
+                    <li class="tmenu">
+                        <a href="#contact">
                         <i><i class="fab fa-telegram"></i></i>
                         CONTACT
                         </a>
                     </li>
                 </ul>
             </nav>
+
+            <section id="resume">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt, delectus!/p>
+            </section>
+
+            <section id="portfolio">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt, delectus!/p>
+            </section>
+
+            <section id="contact">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt, delectus!/p>
+            </section>
+
         </section>
 
         <footer>
@@ -105,7 +123,13 @@
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.easytabs/3.2.0/jquery.easytabs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/1.5.25/jquery.isotope.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.caroufredsel/6.1.0/jquery.carouFredSel.packed.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/custom.js"></script>
+
 </body>
 </html>
