Portfolio section completed

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
     <!DOCTYPE html>
-    <html lang="en">
+    <html lang="en" style="margin-top: 50px;">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -395,7 +395,60 @@
                 </section>
 
                 <section id="portfolio">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt, delectus!/p>
+                    <ul class="cats-filter" id="portfolio-filter">
+                        <li><a href="" class="current transition" data-filter="*">All</a></li>
+                        <li><a href="" class="transition" data-filter=".webdesign">Web Design</a></li>
+                        <li><a href="" class="transition" data-filter=".androidapp">Android App</a></li>
+                        <li><a href="" class="transition" data-filter=".illustration">Illustration</a></li>
+                        <li><a href="" class="transition" data-filter=".photography">Photography</a></li>
+                        <li><a href="" class="transition" data-filter=".projects">Term Projects</a></li>
+                    </ul>
+
+                    <br>
+
+                    <div class="extra-text"> Some of the projects I am proud with</div>
+                    
+                    <ul id="portfolio-list">
+                        <li class="illustration">
+                            <a href="" class="folio">
+                                <img src="images/img3.png" alt="">
+                                <h2 class="title">Chirping Birds</h2>
+                                <span class="category">Illustration</span>
+                            </a>
+                        </li>
+
+                        <li class="webdesign">
+                            <a href="" class="folio">
+                                <img src="images/img5.png" alt="">
+                                <h2 class="title">Hot Wheels</h2>
+                                <span class="category">Web Design</span>
+                            </a>
+                        </li>
+
+                        <li class="photography">
+                            <a href="" class="folio">
+                                <img src="images/img6.jpg" alt="">
+                                <h2 class="title">Stare on Stars</h2>
+                                <span class="category">Photography</span>
+                            </a>
+                        </li>
+
+                        <li class="androidapp">
+                            <a href="https://github.com/Shehabul-Islam-Sawraz/HelloDoctor" class="folio">
+                                <img src="images/bg.jpg" alt="">
+                                <h2 class="title">Hello Doctor</h2>
+                                <span class="category">Android App</span>
+                            </a>
+                        </li>
+
+                        <li class="projects">
+                            <a href="https://github.com/Shehabul-Islam-Sawraz/Asobu_Ka_Shinu" class="folio">
+                                <img src="images/img7.bmp" alt="">
+                                <h2 class="title">Asobu Ka Shinu</h2>
+                                <span class="category">Projects</span>
+                            </a>
+                        </li>
+                    </ul>
                 </section>
 
                 <section id="contact">
