--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
                 <div class="social-icons-container">
                     <span class="social-text">
                         <button class="pulse-button">
-                            <i class="fas fa-share"></i>
+                            <i class="fas fa-share" aria-hidden="true"></i>
                         </button>
                     </span>
 
                     <ul class="social-icons">
-                        <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href=""><i class="fab fa-youtube"></i></a></li>
-                        <li><a href=""><i class="fab fa-github"></i></a></li>
-                        <li><a href=""><i class="fab fa-telegram-plane"></i></a></li>
+                        <li><a href="https://www.facebook.com/shehabul.islam.sawraz" class="setborder"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="https://www.youtube.com/channel/UCu2SXK9U6Zd9HBCCGuzSI8Q" class="setborder"><i class="fab fa-youtube"></i></a></li>
+                        <li><a href="https://github.com/Shehabul-Islam-Sawraz" class="setborder"><i class="fab fa-github"></i></a></li>
+                        <li><a href="" class="setmargin setborder"><i class="fab fa-telegram-plane"></i></a></li>
                     </ul>
                 </div>
             </header>
@@ -452,7 +452,44 @@
                 </section>
 
                 <section id="contact">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt, delectus!/p>
+                    <div id="map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3652.5816323855956!2d90.38609721543126!3d23.72662979559987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b9eb89425be3%3A0x48ebb0555f933c9!2sECE%20Building!5e0!3m2!1sen!2sbd!4v1638466211627!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </div>
+
+                    <div class="contact-info">
+                        <h3 class="main-heading"><span>Contact Info</span></h3>
+                        <ul>
+                            <li>Lorem ipsum dolor sit amet consectetur.</li>
+                            <li>Lorem ipsum dolor sit amet consectetur.</li>
+                        </ul>
+                    </div>
+
+                    <div class="contact-form">
+                        <h3 class="main-heading"><span>Let's Keep in Touch</span></h3>
+                        <br>
+                        <div id="contact-status">
+                            <form action="" id="contactform">
+                                <div class="form-group">
+                                    <input type="text" id="name" class="form-control">
+                                    <label for="name" class="form-control-placeholder">Your Name</label>
+                                </div>
+
+                                <div class="form-group">
+                                    <input type="text" id="email" class="form-control">
+                                    <label for="email" class="form-control-placeholder">Your Email</label>
+                                </div>
+
+                                <label for="message">Your Message</label>
+
+                                <textarea name="message" id="" cols="88" rows="7" class="textarea"></textarea>
+
+                                <input type="submit" name="submit" value="Send Message" class="button transition">
+
+                                <br><br>
+                            </form>
+                        </div>
+                    </div>
+
                 </section>
 
             </section>
