All functionalities added

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                             </ul>
                         </div>
                         <h2>SHEHABUL ISLAM SAWRAZ</h2>
-                        <h3>APP DEVELOPER AND CYBER SECURITY FREAK</h3><br>
+                        <h3>APP DEVELOPER AND CYBER SECURITY ENTHUSIAST</h3><br>
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe iste rerum minus facere! Et, doloribus consequuntur
-                            repellendus aliquam repellat tempora corporis neque 
+                            Hi there 👋.I'm Sawraz, currently studying CSE undergraduate at Bangladesh University of Engineering and Technology(BUET).
+                            I'm a cyber security enthusiast. Trying out learning different languages and hope to find my field of interest. 
                             
                         </p>
                     </div>
@@ -66,7 +66,7 @@
                         <li><label>Address: </label><span>Jatrabari, Bangladesh</span></li>
                         <li><label>Profession: </label><span>Student</span></li>
                         <li><label>Workplace: </label><span>Bangladesh University of Engineering & Technology (BUET)</span></li>
-                        <li><label>Website: </label><span class="word-wrap">www.unknown.com</span></li>
+                        <li><label>Website: </label><span class="word-wrap">https://github.com/Shehabul-Islam-Sawraz</span></li>
                     </ul>
                 </div>
 
@@ -121,8 +121,8 @@
                                         <div class="col-md-6 no-padding bg-color-left">
                                             <div class="left-name bg-color-1">
                                                 <h2>Shehabul Islam<span class="text-color">Sawraz</span></h2>
-                                                <h5> Android App Developer</h5>
-                                                <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs.</p>
+                                                <h5> Cyber Security Enthusiast</h5>
+                                                <p>I am also interested in Game Development, Mobile Application Development & Software Development.</p>
                                             </div>
                                             <div class="left-address">
                                                 <ul>
@@ -135,30 +135,32 @@
                                                 <h2>EXEPIRIENCE</h2>
                                             </div>
                                             <div class="ex-box">
-                                                <h2>2010-2012</h2>
-                                                <h4>PROJECT MANAGER</h4>
-                                                <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print</p>
+                                                <h2>2020-2021</h2>
+                                                <h4>App Development</h4>
+                                                <p>Working on android application development for around 1 years</p>
                                             </div>
                                             <div class="ex-box">
-                                                <h2>2010-2012</h2>
-                                                <h4>PROJECT MANAGER</h4>
-                                                <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print</p>
+                                                <h2>2021-Present</h2>
+                                                <h4>Exploring Cyber Security</h4>
+                                                <p>Exploring different sides of cyber security field mostly the reverse engineering side.
+                                                    To me it is a great field to work on.
+                                                </p>
                                             </div>
                                             <div class="ex-box">
-                                                <h2>2010-2012</h2>
-                                                <h4>PROJECT MANAGER</h4>
-                                                <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print</p>
+                                                <h2>2021-Present</h2>
+                                                <h4>Web Development</h4>
+                                                <p>Recently, I started working on a web project having frontend & backend.</p>
                                             </div>
                                             <div class="ex-box">
-                                                <h2>2010-2012</h2>
-                                                <h4>PROJECT MANAGER</h4>
-                                                <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print</p>
+                                                <h2>2020-Present</h2>
+                                                <h4>Game Development</h4>
+                                                <p>Worked for some game development projects using Unity 3D.</p>
                                             </div>
                                         </div>
                                         <div class="col-md-6 no-padding bg-color-right">
                                             <div class="top-skills">
                                                 <div class="skill-name">
-                                                    <div class="sn">PS</div>
+                                                    <div class="sn">AS</div>
                                                     <ul>
                                                     <li></li>
                                                     <li></li>
@@ -168,7 +170,7 @@
                                                     </ul>
                                                 </div>
                                                 <div class="skill-name">
-                                                    <div class="sn">AI</div>
+                                                    <div class="sn">Dj</div>
                                                     <ul>
                                                     <li></li>
                                                     <li></li>
@@ -178,7 +180,7 @@
                                                     </ul>
                                                 </div>
                                                 <div class="skill-name">
-                                                    <div class="sn">F</div>
+                                                    <div class="sn">Unity</div>
                                                     <ul>
                                                     <li></li>
                                                     <li></li>
@@ -188,7 +190,7 @@
                                                     </ul>
                                                 </div>
                                                 <div class="skill-name">
-                                                    <div class="sn">S</div>
+                                                    <div class="sn">Java</div>
                                                     <ul>
                                                     <li></li>
                                                     <li></li>
@@ -206,7 +208,7 @@
                                                 </div>
                                                 <div class="row no-margin">
                                                     <div class="col-md-5 no-padding">
-                                                    <h4>Photoshop</h4>
+                                                    <h4>Android Studio</h4>
                                                     </div>
                                                     <div class="col-md-7 no-padding">
                                                     <div class="progress">
@@ -217,7 +219,7 @@
                                                 </div>
                                                 <div class="row no-margin">
                                                     <div class="col-md-5 no-padding">
-                                                    <h4>Ms office</h4>
+                                                    <h4>Unity 3D</h4>
                                                     </div>
                                                     <div class="col-md-7 no-padding">
                                                     <div class="progress">
@@ -239,7 +241,7 @@
                                                 </div>
                                                 <div class="row no-margin">
                                                     <div class="col-md-5 no-padding">
-                                                    <h4>html</h4>
+                                                    <h4>Cryptography</h4>
                                                     </div>
                                                     <div class="col-md-7 no-padding">
                                                     <div class="progress">
@@ -250,7 +252,7 @@
                                                 </div>
                                                 <div class="row no-margin mt-25">
                                                     <div class="col-md-5 no-padding">
-                                                    <h4>Photoshop</h4>
+                                                    <h4>HTML</h4>
                                                     </div>
                                                     <div class="col-md-7 no-padding">
                                                     <div class="progress">
@@ -261,7 +263,7 @@
                                                 </div>
                                                 <div class="row no-margin">
                                                     <div class="col-md-5 no-padding">
-                                                    <h4>Ms office</h4>
+                                                    <h4>Python</h4>
                                                     </div>
                                                     <div class="col-md-7 no-padding">
                                                     <div class="progress">
@@ -272,7 +274,7 @@
                                                 </div>
                                                 <div class="row no-margin">
                                                     <div class="col-md-5 no-padding">
-                                                    <h4>Illustrator</h4>
+                                                    <h4>C++</h4>
                                                     </div>
                                                     <div class="col-md-7 no-padding">
                                                     <div class="progress">
@@ -283,7 +285,7 @@
                                                 </div>
                                                 <div class="row no-margin">
                                                     <div class="col-md-5 no-padding">
-                                                    <h4>html</h4>
+                                                    <h4>JAVA</h4>
                                                     </div>
                                                     <div class="col-md-7 no-padding">
                                                     <div class="progress">
@@ -345,17 +347,26 @@
                                                     <div class="col-md-12 heading-skills no-padding">
                                                     <h3>EDUCATION</h3>
                                                     <div class="ex-box">
-                                                        <h2>2010-2012</h2>
-                                                        <h4>PROJECT MANAGER</h4>
-                                                        <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print</p>
+                                                        <h2>2014-2016</h2>
+                                                        <h4>Secondary School Certificate(SSC)</h4>
+                                                        <p>I passed SSC from <a href="https://goo.gl/maps/e48osHgfVAS1gAgr5" style="color: aqua; font-weight: 600;">A.K High School</a> in Science</p>
                                                     </div>
                                                     </div>
+
                                                     <div class="col-md-12 heading-skills no-padding">
                                                     <div class="ex-box">
-                                                        <h2>2010-2012</h2>
-                                                        <h4>PROJECT MANAGER</h4>
-                                                        <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print</p>
+                                                        <h2>2016-2018</h2>
+                                                        <h4>Higher School Certificate(HSC)</h4>
+                                                        <p>I passed HSC from <a href="https://goo.gl/maps/XEk2qwNSaeSL4rGD9" style="color: aqua; font-weight: 600;">Dhaka College</a> in Science</p>
                                                     </div>
+                                                    </div>
+
+                                                    <div class="col-md-12 heading-skills no-padding">
+                                                        <div class="ex-box">
+                                                            <h2>2018-Present</h2>
+                                                            <h4>BSc in Computer Science & Engineering</h4>
+                                                            <p>I am currently studying CSE in <a href="https://goo.gl/maps/aMKqvAb8ihd7DKFHA" style="color: aqua; font-weight: 600;">Bangladesh University of Engineering & Technology(BUET)</a></p>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -371,15 +382,15 @@
                                                             <ul>
                                                                 <li>
                                                                     <i class="fa fa-phone-square" aria-hidden="true"></i>
-                                                                    <p>45534546565</p>
+                                                                    <p>01627230364</p>
                                                                 </li>
                                                                 <li>
                                                                     <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                                                                    <p>Info@gmail.com</p>
+                                                                    <p>atiq115577@gmail.com</p>
                                                                 </li>
                                                                 <li>
                                                                     <i class="fa fa-map-marker" aria-hidden="true"></i>
-                                                                    <p>Dermis India J-219, Saket New Delhi -110017.</p>
+                                                                    <p>Dania, Dhaka-1236</p>
                                                                 </li>
                                                             </ul>
                                                         </div>
@@ -417,10 +428,42 @@
                             </a>
                         </li>
 
-                        <li class="webdesign">
+                        <li class="illustration">
+                            <a href="" class="folio">
+                                <img src="images/img1.png" alt="">
+                                <h2 class="title">Adventure</h2>
+                                <span class="category">Illustration</span>
+                            </a>
+                        </li>
+
+                        <li class="illustration">
+                            <a href="" class="folio">
+                                <img src="images/img2.png" alt="">
+                                <h2 class="title">Sweet Home</h2>
+                                <span class="category">Illustration</span>
+                            </a>
+                        </li>
+
+                        <li class="illustration">
                             <a href="" class="folio">
                                 <img src="images/img5.png" alt="">
                                 <h2 class="title">Hot Wheels</h2>
+                                <span class="category">Illustration</span>
+                            </a>
+                        </li>
+
+                        <li class="webdesign">
+                            <a href="" class="folio">
+                                <img src="images/img11.png" alt="">
+                                <h2 class="title">Calculator</h2>
+                                <span class="category">Web Design</span>
+                            </a>
+                        </li>
+
+                        <li class="webdesign">
+                            <a href="" class="folio">
+                                <img src="images/img10.png" alt="">
+                                <h2 class="title">Todo List</h2>
                                 <span class="category">Web Design</span>
                             </a>
                         </li>
@@ -448,6 +491,14 @@
                                 <span class="category">Projects</span>
                             </a>
                         </li>
+
+                        <li class="projects">
+                            <a href="https://github.com/Shehabul-Islam-Sawraz/Car_Ware_House_Oflline-6" class="folio">
+                                <img src="images/img12.jpg" alt="">
+                                <h2 class="title">Car Warehouse</h2>
+                                <span class="category">Projects</span>
+                            </a>
+                        </li>
                     </ul>
                 </section>
 
@@ -459,8 +510,8 @@
                     <div class="contact-info">
                         <h3 class="main-heading"><span>Contact Info</span></h3>
                         <ul>
-                            <li>Lorem ipsum dolor sit amet consectetur.</li>
-                            <li>Lorem ipsum dolor sit amet consectetur.</li>
+                            <li>Phone No: 01627230364</li>
+                            <li>Email: atiq115577@gmail.com</li>
                         </ul>
                     </div>
 
